--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 title: Leo
 email: your-email@example.com
-name: Leo
+name: Leo Ma
 description: >- # this means to ignore newlines until "baseurl:"
-  Work in Progress
+  PT, DPT, PhD
 keywords: [Your keywords]
 baseurl: '' # the subpath of your site, e.g. /`blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
