--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ sass:
 markdown: kramdown
 plugins:
   - github-pages
+  - jekyll-redirect-from
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
